--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <!-- The above 3 meta tags *must* comes first in the head; any other head content must come *after* these tags -->
     <title>Rohail PorjhhhtfosslhwssDDDDdssssdddzzzzio</title>
      <link rel="shortcut icon" type="image/png" href="https://www.r-project.org/logo/Rlogo.png">
 
