--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* comes first in the head; any other head content must come *after* these tags -->
     <title>Rohail Porjhhhtdssssssssssjjjjssdzzsalmanzzio</title>
+    <title>Test2</title>
      <link rel="shortcut icon" type="image/png" href="https://www.r-project.org/logo/Rlogo.png">
 
     <!-- Bootstrap -->
