--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* comes first in the head; any other head content must come *after* these tags -->
-    <title>Rohail Porjhhhtdssssssssssjjjjssdzzsalmanzzio</title>
+    <title>Rohail Porjhhhtdfsdfjdslkfjdsflksssssssssssjjjjssdzzsalmanzzio</title>
     <title>Test2</title>
      <link rel="shortcut icon" type="image/png" href="https://www.r-project.org/logo/Rlogo.png">
 
@@ -15,7 +15,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="styling.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
-
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="styling.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
   </head>
   <body data-spy="scroll" data-target="#mynavBar">
      <!--Add video to the body element-->
